some more testing - still not working :(

--- a/dvbt-hackrf.conf
+++ b/dvbt-hackrf.conf
@@ -1,12 +1,12 @@
 [dvb-t]
 bandwith = 8
 mode = 2k
-code-rate = 1/2
-constellation = QPSK
+code-rate = 2/3
+constellation = QAM16
 guard-interval = 1/4
 
 [hackrf]
 frequency = 498000000
-rf-gain = 14
-if-gain = 20
-bb-gain = 20
+rf-gain = 10
+if-gain = 10
+bb-gain = 10
