script now also works for different modulation parameter

--- a/dvbt-hackrf.conf
+++ b/dvbt-hackrf.conf
@@ -1,8 +1,8 @@
 [dvb-t]
 bandwith = 8
 mode = 2k
-code-rate = 2/3
-constellation = QAM16
+code-rate = 1/2
+constellation = QPSK
 guard-interval = 1/4
 
 [hackrf]
