added wrapper for tsrfsend to use the same config file than hackrf and bitrate

--- a/dvbt.conf
+++ b/dvbt.conf
@@ -5,8 +5,14 @@ code-rate = 1/2
 constellation = QPSK
 guard-interval = 1/4
 
-[hackrf]
+[channel]
 frequency = 498000000
-rf-gain = 20
-if-gain = 20
-bb-gain = 20
+
+[hackrf]
+rf-gain = 14
+if-gain = 0
+bb-gain = 60
+
+[tsrfsend]
+cell-id = 0
+gain = 3
